--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "077107f3",
+   "id": "fc655b53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "6c6ef605",
    "metadata": {},
    "outputs": [
@@ -127,11 +127,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-16 02:00:30,948 - Start building the master Graph...\n",
-      "2021-11-16 02:00:30,961 - Master Graph building is completed.\n",
-      "2021-11-16 02:00:30,962 - Creating Comparer\n",
-      "2021-11-16 02:00:30,979 - Creating vocab\n",
-      "2021-11-16 02:00:33,994 - Vocab is created\n"
+      "2021-11-16 03:26:19,210 - Start building the master Graph...\n",
+      "2021-11-16 03:26:19,210 - Start building the master Graph...\n",
+      "2021-11-16 03:26:19,210 - Start building the master Graph...\n",
+      "2021-11-16 03:26:19,225 - Master Graph is built.\n",
+      "2021-11-16 03:26:19,225 - Master Graph is built.\n",
+      "2021-11-16 03:26:19,225 - Master Graph is built.\n",
+      "2021-11-16 03:26:19,226 - Creating Comparer\n",
+      "2021-11-16 03:26:19,226 - Creating Comparer\n",
+      "2021-11-16 03:26:19,226 - Creating Comparer\n",
+      "2021-11-16 03:26:22,646 - Initializing LSA comparer...\n",
+      "2021-11-16 03:26:22,646 - Initializing LSA comparer...\n",
+      "2021-11-16 03:26:22,646 - Initializing LSA comparer...\n",
+      "2021-11-16 03:26:22,648 - Fitting vectorizer and features reducer...\n",
+      "2021-11-16 03:26:22,648 - Fitting vectorizer and features reducer...\n",
+      "2021-11-16 03:26:22,648 - Fitting vectorizer and features reducer...\n",
+      "2021-11-16 03:26:37,418 - Done.\n",
+      "2021-11-16 03:26:37,418 - Done.\n",
+      "2021-11-16 03:26:37,418 - Done.\n",
+      "2021-11-16 03:26:37,420 - Comparer created.\n",
+      "2021-11-16 03:26:37,420 - Comparer created.\n",
+      "2021-11-16 03:26:37,420 - Comparer created.\n"
      ]
     }
    ],
@@ -141,49 +157,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "687b44ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5584"
+       "5481"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(nb.vocab)"
+    "len(nb.lsa.vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "a84136b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "TruncatedSVD(n_components=1644, random_state=42)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nb.vocab['_unknown_']"
+    "nb.lsa.svd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "id": "7debc7ea",
    "metadata": {},
    "outputs": [
@@ -191,12 +207,18 @@
      "data": {
       "text/plain": [
        "{'name': 'Jobs graph',\n",
-       " 'num_employers': 2041,\n",
-       " 'num_jobs': 1411,\n",
-       " 'num_candidates': 962}"
+       " 'num_employers': 1164,\n",
+       " 'num_jobs': 903,\n",
+       " 'num_candidates': 962,\n",
+       " 'num_candidate_match_job': 0,\n",
+       " 'num_similar_candidates': 0,\n",
+       " 'num_similar_jobs': 0,\n",
+       " 'num_similar_employers': 0,\n",
+       " 'num_apply': 0,\n",
+       " 'num_favorite': 0}"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
