--- a/recommender/core/test.ipynb
+++ b/recommender/core/test.ipynb
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "5f68afc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(r'C:\\Users\\ASUS\\Desktop\\repositories\\job_recommender')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "00a67d93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Error loading stopwords: <urlopen error [Errno 11001]\n",
-      "[nltk_data]     getaddrinfo failed>\n",
-      "[nltk_data] Error loading wordnet: <urlopen error [Errno 11001]\n",
-      "[nltk_data]     getaddrinfo failed>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import networkx as nx\n",
