--- a/recommender/core/test.ipynb
+++ b/recommender/core/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "46eaa68f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "00a67d93",
    "metadata": {},
    "outputs": [
@@ -59,14 +59,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1b325bae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies_df = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\job_recommender\\data\\companies.csv')\n",
-    "jobs_df = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\job_recommender\\data\\jobs.csv')\n",
-    "cv = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\job_recommender\\data\\cvdata\\ResumeDataSet.csv', encoding = 'utf-8')"
+    "companies_df = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\repositories\\job_recommender\\data\\companies.csv')\n",
+    "jobs_df = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\repositories\\job_recommender\\data\\jobs.csv')\n",
+    "cv = pd.read_csv(r'C:\\Users\\ASUS\\Desktop\\repositories\\job_recommender\\data\\cvdata\\ResumeDataSet.csv', encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ebee5a6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Resume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Skills * Programming Languages: Python (pandas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Education Details \\r\\nMay 2013 to May 2017 B.E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Areas of Interest Deep Learning, Control Syste...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Skills â¢ R â¢ Python â¢ SAP HANA â¢ Table...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Education Details \\r\\n MCA   YMCAUST,  Faridab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>957</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>Computer Skills: â¢ Proficient in MS office (...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>â Willingness to accept the challenges. â ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>959</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>PERSONAL SKILLS â¢ Quick learner, â¢ Eagerne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>COMPUTER SKILLS &amp; SOFTWARE KNOWLEDGE MS-Power ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>961</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>Skill Set OS Windows XP/7/8/8.1/10 Database MY...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>962 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Category                                             Resume\n",
+       "0    Data Science  Skills * Programming Languages: Python (pandas...\n",
+       "1    Data Science  Education Details \\r\\nMay 2013 to May 2017 B.E...\n",
+       "2    Data Science  Areas of Interest Deep Learning, Control Syste...\n",
+       "3    Data Science  Skills â¢ R â¢ Python â¢ SAP HANA â¢ Table...\n",
+       "4    Data Science  Education Details \\r\\n MCA   YMCAUST,  Faridab...\n",
+       "..            ...                                                ...\n",
+       "957       Testing  Computer Skills: â¢ Proficient in MS office (...\n",
+       "958       Testing  â Willingness to accept the challenges. â ...\n",
+       "959       Testing  PERSONAL SKILLS â¢ Quick learner, â¢ Eagerne...\n",
+       "960       Testing  COMPUTER SKILLS & SOFTWARE KNOWLEDGE MS-Power ...\n",
+       "961       Testing  Skill Set OS Windows XP/7/8/8.1/10 Database MY...\n",
+       "\n",
+       "[962 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv"
    ]
   },
   {
